[Fix] Login - too much padding

--- a/client/src/app/auth/components/login/login.component.scss
+++ b/client/src/app/auth/components/login/login.component.scss
@@ -46,7 +46,7 @@
 
 @media screen and (min-width: 768px) {
   .login-container {
-    padding: 90px 16px 240px;
+    padding: 48px 16px 240px;
     // background-color: #f5f5f8;
     .form-container {
       padding: 36px;
